# todo_app_hct

./: .gitignore  .mcp.json  BACKEND-VALIDATION-RESULTS.md  CHANGELOG.md  CLAUDE-DIAGNOSTIC-SNIPPET.md  CLAUDE-PHASE3.md  CLAUDE-TEMPLATE-WITH-DIAGNOSTICS.md  CLAUDE.md  DEPLOYMENT.md  DIAGNOSTIC-PRINCIPLES.md  DIAGNOSTIC-PROTOCOL-UNIVERSAL.md  HOW-TO-APPLY-DIAGNOSTICS-EVERYWHERE.md  IMPLEMENTATION_SUMMARY.md  KEYBOARD_SHORTCUTS.md  MANUAL_TESTING.md  PHASE3-FRONTEND-IMPLEMENTATION.md  PHASE3-FRONTEND-PLAN.md  PHASE3-IMPLEMENTATION-STATUS.md  PHASE3-NFR-AND-TESTING-SUMMARY.md  PHASE3_IMPLEMENTATION.md  QUICKSTART_PHASE3.md  README.md  USER_GUIDE.md  tmpclaude-3966-cwd
backend/: .env.example  Dockerfile  README.md  README_HF.md  pyproject.toml  requirements.txt  tmpclaude-e756-cwd
backend/alembic/: env.py
backend/alembic/versions/: 57b259b29a5e_add_priority_due_date_tags_and_.py  a1f3b9c4d2e5_add_conversation_message_tables_phase3.py  tmpclaude-b17e-cwd
backend/src/: config.py  database.py  dependencies.py  main.py  tmpclaude-a37f-cwd
backend/src/agents/: __init__.py  action_agent.py  intent_classifier.py  response_formatter.py  rule_based_classifier.py  task_resolution.py
backend/src/api/: auth.py  tasks.py
backend/src/mcp/: __init__.py  logging_config.py  task_tools.py
backend/src/middleware/: rate_limiter.py
backend/src/models/: conversation.py  task.py  user.py
backend/src/routes/: chat.py  conversations.py
backend/src/schemas/: auth.py  chat.py  task.py
backend/tests/: conftest.py  test_chat_endpoint.py  test_mcp_tools.py
frontend/: README.md  (+2 more)
(+113 files in other folders)
